--- a/notebooks/run_dmrg.ipynb
+++ b/notebooks/run_dmrg.ipynb
@@ -7,7 +7,7 @@
     "# Running Instructions\n",
     "\n",
     "Below instructions tested in Ubuntu 22.04.3 (Windows Subsystem for Linux 2, WSL2).  \n",
-    "1. Create a clean Python 3.10 virtual environment: `python -m venv env_planted_solutions`\n",
+    "1. Create a clean Python 3.10 virtual environment: `python -m venv env_run_dmrg`\n",
     "2. Activate environment: `source env_run_dmrg/bin/activate`\n",
     "3. Install Jupyter notebook: `python -m pip install notebook`\n",
     "4. Update relevant parameters; see [General Parameters](#general-parameters) and [DMRG Parameters](#dmrg-parameters.)\n",
