--- a/notebooks/run_dmrg.ipynb
+++ b/notebooks/run_dmrg.ipynb
@@ -6,12 +6,17 @@
    "source": [
     "# Running Instructions\n",
     "\n",
-    "Below instructions tested in Ubuntu 22.04.3 (Windows Subsystem for Linux 2, WSL2).  \n",
-    "1. Create a clean Python 3.10 virtual environment: `python -m venv env_run_dmrg`\n",
-    "2. Activate environment: `source env_run_dmrg/bin/activate`\n",
-    "3. Install Jupyter notebook: `python -m pip install notebook`\n",
-    "4. Update relevant parameters; see [General Parameters](#general-parameters) and [DMRG Parameters](#dmrg-parameters.)\n",
-    "5. Run this notebook. Running in VS Code is recommended, but not necessary."
+    "Below instructions tested in Ubuntu 22.04.3 (Windows Subsystem for Linux 2, WSL2). This notebook will likely also work on MaxOS X.\n",
+    "1. Download the GSEE benchmark from Github: https://github.com/isi-usc-edu/qb-gsee-benchmark/archive/refs/heads/main.zip\n",
+    "2. Using a terminal, unzip the benchmark code: `unzip main.zip`\n",
+    "3. Enter the benchmark folder: `cd qb-gsee-benchmark-main`\n",
+    "4. Create a clean Python 3.10 virtual environment ([Python Website](https://www.python.org/downloads/)) with this command: `python -m venv env_run_dmrg`\n",
+    "5. Activate environment: `source env_run_dmrg/bin/activate`\n",
+    "6. Install Jupyter notebook: `python -m pip install notebook`\n",
+    "7. Open this notebook: `jupyter notebook notebooks/run_dmrg.ipynb` \n",
+    "8. Update relevant parameters as needed; see [General Parameters](#general-parameters) and [DMRG Parameters](#dmrg-parameters.)\n",
+    "9. Run the notebook.\n",
+    "\n"
    ]
   },
   {
@@ -172,7 +177,7 @@
     "#       num_threads_list              # Ensure this is not more than the number of cores (or threads) on your machine\n",
     "#       n_mkl_threads_list            # Ensure this is not more than the number of cores (or threads) on your machine\n",
     "#       stack_mem                     # Ensure this is less than the total memory available on your machine; not a hard memory limit on Block2, though\n",
-    "#       python_environment_location   # Update this to the path of your python environment where this notebook is running\n",
+    "#       python_environment_location   # Update this to the path of your python environment where this notebook is running; if the running instructions are followed, this need not be changed\n",
     "\n",
     "# For more control of the calculation, consider also changing:\n",
     "#       max_time_limit_sec_list\n",
