--- a/notebooks/run_dmrg.ipynb
+++ b/notebooks/run_dmrg.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Below instructions tested in Ubuntu 22.04.3 (Windows Subsystem for Linux 2, WSL2). This notebook will likely also work on MaxOS X.\n",
     "1. Download the GSEE benchmark from Github: https://github.com/isi-usc-edu/qb-gsee-benchmark/archive/refs/heads/main.zip\n",
-    "2. Using a terminal, unzip the benchmark code: `unzip main.zip`\n",
+    "2. Using a terminal, unzip the benchmark code: `unzip qb-gsee-benchmark-main.zip`\n",
     "3. Enter the benchmark folder: `cd qb-gsee-benchmark-main`\n",
     "4. Create a clean Python 3.10 virtual environment ([Python Website](https://www.python.org/downloads/)) with this command: `python -m venv env_run_dmrg`\n",
     "5. Activate environment: `source env_run_dmrg/bin/activate`\n",
