Updated paths for problem_instances directory

--- a/examples/get_overlap.ipynb
+++ b/examples/get_overlap.ipynb
@@ -25,7 +25,7 @@
     "# General parameters\n",
     "repository_url = \"https://github.com/isi-usc-edu/qb-gsee-benchmark/archive/refs/heads/main.zip\"\n",
     "problem_instance_files_repository_path = (\n",
-    "    \"problem_instances\"\n",
+    "    \"data/problem_instances\"\n",
     ")"
    ]
   },
