--- a/examples/run_dmrg.ipynb
+++ b/examples/run_dmrg.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "solution_save_location = \"solution_jsons\"\n",
     "problem_instance_files_repository_path = (\n",
-    "    \"problem_instances\"\n",
+    "    \"data/problem_instances\"\n",
     ")\n",
     "\n",
     "chosen_problem_instance_files = [\n",
