--- a/examples/work_in_progress/update_cat_instance.ipynb
+++ b/examples/work_in_progress/update_cat_instance.ipynb
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing ../problem_instances/problem_instance.ru_macho.b78a10f2-ce8a-43c0-69ec-4cf666d8e85c.json...\n",
+      "Processing ../data/problem_instances/problem_instance.ru_macho.b78a10f2-ce8a-43c0-69ec-4cf666d8e85c.json...\n",
       "sftp://sftp.l3harris.com/gsee/fcidump.2_co2_0.2_old.1dc29784-ab7f-45a1-9821-31fea4363d74.gz\n",
       "sftp://sftp.l3harris.com/gsee/fcidump.7_melact_0.2_old.5dbed2ac-f9a4-4afe-9b18-f67378a51fb2.gz\n",
       "sftp://sftp.l3harris.com/gsee/fcidump.8_melact_0.2_old.587f69a8-4295-4d6d-811e-0eacfbc5f6dd.gz\n",
@@ -156,7 +156,7 @@
     "port = 22\n",
     "username = 'darpa-qb-zapata'\n",
     "key_file_path = '/Users/akunitsa/.ssh/darpa-qb-zapata-key.ppk' # Put the path for your private key here\n",
-    "directory = '../problem_instances'  # Directory containing the JSON files\n",
+    "directory = '../data/problem_instances'  # Directory containing the JSON files\n",
     "upload_directory = './fcidumps'  # Local directory containing the new fcidump files\n",
     "csv_file_path = './catalysis_metadata_new_fcidump.csv'  # Path to the CSV file containing new data\n",
     "target_directory = '/gsee/'  # Target directory on the SFTP server\n",
@@ -164,7 +164,7 @@
     "# Create SFTP session\n",
     "sftp = create_sftp_session(host, port, username, key_file_path)\n",
     "\n",
-    "# Iterate over all files in the problem_instances directory\n",
+    "# Iterate over all files in the data/problem_instances directory\n",
     "#json_file_path = os.path.join(directory, 'problem_instance.fe_red.a8895776-3583-4884-fbc7-d6f9df21a7ac.json')  # Full path to the JSON file\n",
     "json_file_path = os.path.join(directory, 'problem_instance.ru_macho.b78a10f2-ce8a-43c0-69ec-4cf666d8e85c.json')  # Full path to the JSON file\n",
     "print(f\"Processing {json_file_path}...\")\n",
