Update DMRG example given new schema validation method and to not require second download of benchmark repository

--- a/examples/run_dmrg.ipynb
+++ b/examples/run_dmrg.ipynb
@@ -10,10 +10,12 @@
     "1. Download the GSEE benchmark from Github: https://github.com/isi-usc-edu/qb-gsee-benchmark/archive/refs/heads/main.zip\n",
     "2. Using a terminal, unzip the benchmark code: `unzip qb-gsee-benchmark-main.zip`\n",
     "3. Enter the benchmark folder: `cd qb-gsee-benchmark-main`\n",
-    "4. Create a clean Python 3.10 virtual environment ([Python Website](https://www.python.org/downloads/)) with this command: `python -m venv env_run_dmrg`\n",
-    "5. Activate environment: `source env_run_dmrg/bin/activate`\n",
-    "6. Install Jupyter notebook: `python -m pip install notebook`\n",
-    "7. Open this notebook: `jupyter notebook notebooks/run_dmrg.ipynb` \n",
+    "4. Create a clean Python 3.10 virtual environment ([Python Website](https://www.python.org/downloads/)) with this command: `python -m venv env_qb_benchmark`\n",
+    "5. Activate environment: `source env_qb_benchmark/bin/activate`\n",
+    "6. Install benchmark software: `pip install -e .`\n",
+    "7. Install Jupyter notebook: `python -m pip install notebook`\n",
+    "8. Enter example folder: `cd example`\n",
+    "7. Open this notebook: `jupyter notebook run_dmrg.ipynb` \n",
     "8. Update relevant parameters as needed; see [General Parameters](#general-parameters) and [DMRG Parameters](#dmrg-parameters.)\n",
     "9. Run the notebook.\n",
     "\n"
@@ -31,26 +33,25 @@
     "# Install DMRG\n",
     "!{sys.executable} -m pip install --extra-index-url=https://block-hczhai.github.io/block2-preview/pypi/ git+https://github.com/jtcantin/dmrghandler\n",
     "\n",
-    "!{sys.executable} -m pip install paramiko h5py numpy\n",
+    "!{sys.executable} -m pip install paramiko h5py numpy \n",
     "\n",
     "# This took about 8 minutes on my machine for the first time, but only about 7 seconds after that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import urllib.request\n",
     "from pathlib import Path\n",
     "import json\n",
     "import dmrghandler.config_io as config_io\n",
     "import dmrghandler.slurm_scripts as slurm_scripts\n",
     "import h5py\n",
-    "import jsonschema\n",
-    "import run_support as rs"
+    "import run_support\n",
+    "import qb_gsee_benchmark.utils"
    ]
   },
   {
@@ -62,12 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "remove_temp_files = True # IMPORTANT: If you want to keep the DRMG output files, not just the jsons, set this to False\n",
-    "environment_path=Path(\"../env_run_dmrg\")\n",
+    "environment_path=Path(\"../env_qb_benchmark\")\n",
     "ppk_path=\"/mnt/c/darpa-qb-key.ppk\" # Update this to the path of your private key\n",
     "sftp_username=\"darpa-qb\" # Update this to your username\n",
     "local_store_path = Path(\"dmrg_calculation_storage\")\n",
@@ -122,20 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Download problem instance files\n",
-    "repository_filepath = Path(\"repository.zip\")\n",
-    "\n",
-    "repository_path = Path(\"qb-gsee-benchmark-main\")\n",
-    "if not repository_path.exists():\n",
-    "    # Download repository\n",
-    "    urllib.request.urlretrieve(repository_url, repository_filepath.name)\n",
-    "    # unzip repository\n",
-    "    os.system(f\"unzip {repository_filepath}\")\n",
-    "\n",
+    "# Obtain problem instance files\n",
+    "repository_path = Path(\"../\")\n",
     "problem_instance_files_path = repository_path / problem_instance_files_repository_path\n",
     "problem_instance_files = list(problem_instance_files_path.glob(\"*.json\"))"
    ]
@@ -147,7 +140,7 @@
    "outputs": [],
    "source": [
     "# Download and save FCIDUMPs as listed in chosen_problem_instance_files\n",
-    "data_file_list = rs.download_task_fcidump_files(\n",
+    "data_file_list = run_support.download_task_fcidump_files(\n",
     "    chosen_problem_instance_files,\n",
     "    problem_instance_files_path,\n",
     "    local_store_path,\n",
@@ -268,7 +261,7 @@
     "    \"tasks_per_node\": \"1\",\n",
     "    \"cpus_per_task\": \"40\",\n",
     "    \"partition\": \"debug\",\n",
-    "    \"python_environment_location\": \"../env_run_dmrg\",\n",
+    "    \"python_environment_location\": \"../env_qb_benchmark\",\n",
     "}\n",
     "\n",
     "# Generate python and SLURM submission scripts\n",
@@ -367,7 +360,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uuid_fcidump_mapping_dict = rs.get_uuid_fcidump_mapping(submit_commands, local_store_path)\n",
+    "uuid_fcidump_mapping_dict = run_support.get_uuid_fcidump_mapping(submit_commands, local_store_path)\n",
     "print(uuid_fcidump_mapping_dict)\n"
    ]
   },
@@ -377,8 +370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dmrgh5_data = rs.collect_dmrg_data(dmrg_hdf5_files, uuid_fcidump_mapping_dict)\n",
-    "all_dmrgh5_data = rs.filter_lowest_energy_data(all_dmrgh5_data)"
+    "all_dmrgh5_data = run_support.collect_dmrg_data(dmrg_hdf5_files, uuid_fcidump_mapping_dict)\n",
+    "all_dmrgh5_data = run_support.filter_lowest_energy_data(all_dmrgh5_data)"
    ]
   },
   {
@@ -387,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prob_inst_data_sol_dict = rs.map_fcidump_to_problem_instances(\n",
+    "prob_inst_data_sol_dict = run_support.map_fcidump_to_problem_instances(\n",
     "    chosen_problem_instance_files, problem_instance_files_path, all_dmrgh5_data\n",
     ")\n",
     "print(prob_inst_data_sol_dict)\n"
@@ -406,8 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "rs.create_solution_files(\n",
+    "# Save the solution files\n",
+    "saved_files = run_support.create_solution_files(\n",
     "    prob_inst_data_sol_dict,\n",
     "    solution_save_location,\n",
     "    json_solution_schema_url_file,\n",
@@ -415,7 +408,12 @@
     "    solver_details,\n",
     ")\n",
     "\n",
-    "rs.validate_solution_files(json_solution_schema_url, prob_inst_data_sol_dict)\n"
+    "# Validate the saved files\n",
+    "for sol_file in saved_files:\n",
+    "    with open(sol_file, \"r\") as f:\n",
+    "        sol_data = json.load(f)\n",
+    "        qb_gsee_benchmark.utils.validate_json(json_dict=sol_data)\n",
+    "        print(f\"File {sol_file} is valid.\")"
    ]
   },
   {
@@ -427,14 +425,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "if remove_temp_files:\n",
-    "    os.remove(repository_filepath)\n",
     "    os.remove(\"dmrghandler.log\")\n",
-    "    os.system(f\"rm -r {repository_path}\")\n",
     "    os.system(f\"rm -r {scratch_sim_path}\")\n",
     "    os.system(f\"rm -r {local_store_path}\")\n",
     "    os.system(f\"rm -r config_store\")\n",
@@ -445,7 +441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_run_dmrg",
+   "display_name": "env_qb_benchmark",
    "language": "python",
    "name": "python3"
   },
