--- a/examples/run_dmrg.ipynb
+++ b/examples/run_dmrg.ipynb
@@ -35,7 +35,8 @@
     "\n",
     "!{sys.executable} -m pip install paramiko h5py numpy \n",
     "\n",
-    "# This took about 8 minutes on my machine for the first time, but only about 7 seconds after that."
+    "# This cell took about 8 minutes on the authors machine for the first time, but only about 7 seconds after that.\n",
+    "# For the chosen problem instances, DMRG should take no more than 15min to run on a laptop."
    ]
   },
   {
