--- a/examples/run_dmrg.ipynb
+++ b/examples/run_dmrg.ipynb
@@ -8,16 +8,17 @@
     "\n",
     "Below instructions tested in Ubuntu 22.04.3 (Windows Subsystem for Linux 2, WSL2). This notebook will likely also work on MaxOS X.\n",
     "1. Download the GSEE benchmark from Github: https://github.com/isi-usc-edu/qb-gsee-benchmark/archive/refs/heads/main.zip\n",
-    "2. Using a terminal, unzip the benchmark code: `unzip qb-gsee-benchmark-main.zip`\n",
-    "3. Enter the benchmark folder: `cd qb-gsee-benchmark-main`\n",
+    "2. Using a terminal, clone the benchmark repository: `git clone https://github.com/isi-usc-edu/qb-gsee-benchmark.git`\n",
+    "3. Enter the benchmark folder: `cd qb-gsee-benchmark`\n",
     "4. Create a clean Python 3.10 virtual environment ([Python Website](https://www.python.org/downloads/)) with this command: `python -m venv env_qb_benchmark`\n",
     "5. Activate environment: `source env_qb_benchmark/bin/activate`\n",
-    "6. Install benchmark software: `pip install -e .`\n",
-    "7. Install Jupyter notebook: `python -m pip install notebook`\n",
-    "8. Enter example folder: `cd example`\n",
-    "9. Open this notebook: `jupyter notebook run_dmrg.ipynb` \n",
-    "10. Update relevant parameters as needed; see [General Parameters](#general-parameters) and [DMRG Parameters](#dmrg-parameters.)\n",
-    "11. Run the notebook.\n",
+    "6. Install benchmark software: `python -m pip install -e .`\n",
+    "7. Enter examples folder: `cd examples`\n",
+    "8. Open this notebook: `jupyter notebook run_dmrg.ipynb` \n",
+    "9. Copy and paste the provided URL to a web browser. The URL will look like `http://localhost:8888/tree?token=62cc0dcd33bf946ec260fed02b19b6a453f9b89107dd2d70`\n",
+    "10. Open `run_dmrg.ipynb`\n",
+    "11. Update relevant parameters as needed; see [General Parameters](#general-parameters) and [DMRG Parameters](#dmrg-parameters.)\n",
+    "12. Run all cells of the notebook. The whole notebook should run in less than 15 min on a laptop.\n",
     "\n"
    ]
   },
